Added two new projects, deleted the old one

--- a/Stable Frontend/Pages/FetchData.razor
+++ b/Stable Frontend/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using UAH_Stable.Data
+@using Stable_Frontend.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
