--- a/Stable Frontend/_Imports.razor
+++ b/Stable Frontend/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using UAH_Stable
-@using UAH_Stable.Shared
+@using Stable_Frontend
+@using Stable_Frontend.Shared
