--- a/Stable Frontend/Pages/Project.razor
+++ b/Stable Frontend/Pages/Project.razor
@@ -1,7 +1,15 @@
-﻿@page "/"
+﻿@page "/project"
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+@code {
+
+    
+
+
+
+}
