--- a/Stable Frontend/Shared/NavMenu.razor
+++ b/Stable Frontend/Shared/NavMenu.razor
@@ -7,19 +7,31 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="announcement">
+                <span class="oi oi-plus" aria-hidden="true"></span> Announcements
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="petition">
+                <span class="oi oi-plus" aria-hidden="true"></span> Petition
+            </NavLink>
+
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="project">
+                <span class="oi oi-plus" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> example
             </NavLink>
         </li>
     </ul>
