--- a/Stable Frontend/Pages/Announcement.razor
+++ b/Stable Frontend/Pages/Announcement.razor
@@ -2,48 +2,49 @@
 
 @using Stable_Frontend.Data
 @inject WeatherForecastService ForecastService
+@inject NavigationManager NavManager
 
 <body>
     <div class="navbar navbar-lgiht bg-light">
-        <span class="navbar-brand mb-0">
-            <h1>Announcements</h1>
-        </span>
+        <div class="navbar-brand mb-0">
+            <h2>Announcements</h2>
+        </div>
     </div>
     <div class="row" id="column-container">
         <div class="col-4" id="category-column">
             <h6 class="font-weight-bold" style="margin:10px 0">Categories</h6>
             <table>
                 <tr>
-                    <th><input type="checkbox" id="arts" value="arts_val"/></th>
+                    <th><input type="checkbox" id="arts" value="arts_val" /></th>
                     <th>College of Arts Humanities Social Sciences</th>
                 </tr>
                 <tr>
-                    <th><input type="checkbox" id="business" value="business_val"/></th>
+                    <th><input type="checkbox" id="business" value="business_val" /></th>
                     <th>College of Business</th>
                 </tr>
                 <tr>
-                    <th><input type="checkbox" id="education" value="education_val"/></th>
+                    <th><input type="checkbox" id="education" value="education_val" /></th>
                     <th>College of Education</th>
                 </tr>
                 <tr>
-                    <th><input type="checkbox" id="engineering" value="engineering_val"/></th>
+                    <th><input type="checkbox" id="engineering" value="engineering_val" /></th>
                     <th>College of Engineering</th>
                 </tr>
                 <tr>
-                    <th><input type="checkbox" id="nursing" value="nursing_val"/></th>
+                    <th><input type="checkbox" id="nursing" value="nursing_val" /></th>
                     <th>College of Nursing</th>
                 </tr>
                 <tr>
-                    <th><input type="checkbox" id="science" value="science_val"/></th>
+                    <th><input type="checkbox" id="science" value="science_val" /></th>
                     <th>College of Science</th>
                 </tr>
                 <tr>
-                    <th><input type="checkbox" id="honors" value="honors_val"/></th>
+                    <th><input type="checkbox" id="honors" value="honors_val" /></th>
                     <th>Honors College</th>
                 </tr>
             </table>
         </div>
-        <div class="col-8"  id="table-column">
+        <div class="col-8" id="table-column">
             <div style="overflow: auto">
                 <table class="table">
                     <thead>
@@ -68,7 +69,7 @@
                 </table>
             </div>
             <div id="edit-button-container">
-                <button id="add_post">Add Post</button>
+                <button id="add_post" @onclick="AddPost">Add Post</button>
             </div>
         </div>
     </div>
@@ -79,6 +80,13 @@
 
 
 @code {
+
+    private void AddPost()
+    {
+        NavManager.NavigateTo("editor");
+    }
+
+
     private WeatherForecast[] forecasts;
 
     protected override async Task OnInitializedAsync()
