--- a/Stable Frontend/Pages/_Host.cshtml
+++ b/Stable Frontend/Pages/_Host.cshtml
@@ -14,6 +14,8 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -32,5 +34,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="~/js/BlazorQuill.js"></script>
 </body>
 </html>
