Working text editor. It does not have the image insertion feature.

--- a/Stable Frontend/Pages/Announcement.razor
+++ b/Stable Frontend/Pages/Announcement.razor
@@ -69,7 +69,7 @@
                 </table>
             </div>
             <div id="edit-button-container">
-                <button id="add_post" @onclick="AddPost">Add Post</button>
+                <button id="add_post" @onclick="AddPost">Add Announcement</button>
             </div>
         </div>
     </div>
