--- a/Stable Frontend/Pages/_Host.cshtml
+++ b/Stable Frontend/Pages/_Host.cshtml
@@ -14,8 +14,9 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
-    <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet" />
+    <!-- Quill stylesheet -->
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
 </head>
 <body>
     <app>
@@ -34,7 +35,8 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <!-- Quill library -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="~/js/BlazorQuill.js"></script>
+    <script src="BlazorQuill.js"></script>
 </body>
 </html>
