Reorganized NavMenu and Announcement pages. Added a Post page

--- a/Stable Frontend/Shared/NavMenu.razor
+++ b/Stable Frontend/Shared/NavMenu.razor
@@ -9,28 +9,23 @@
     <ul class="nav flex-column">
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="announcement">
-                <span class="oi oi-plus" aria-hidden="true"></span> Announcements
+            <NavLink class="nav-link" href="announcement" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Announcements
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="petition">
-                <span class="oi oi-plus" aria-hidden="true"></span> Petition
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Petition
             </NavLink>
 
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="project">
-                <span class="oi oi-plus" aria-hidden="true"></span> Projects
+                <span class="oi oi-pencil" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="post">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> example
             </NavLink>
         </li>
