--- a/Stable Frontend/Shared/NavMenu.razor
+++ b/Stable Frontend/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Stable Frontend</a>
+    <a class="navbar-brand" href="announcement">Stable Frontend</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
