--- a/Stable Frontend/Pages/Petition.razor
+++ b/Stable Frontend/Pages/Petition.razor
@@ -1,4 +1,52 @@
 ﻿@page "/petition"
 
-<h1>Petition</h1>
+@using Stable_Frontend.Data
+@inject WeatherForecastService ForecastService
 
+<div class="navbar navbar-lgiht bg-light">
+    <div class="navbar-brand mb-0">
+        <h2>Petitions</h2>
+    </div>
+</div>
+<div style="border:10px" id="list container">
+    <div id="list">
+        <table class="table">
+            <thead class="thead-primary">
+                <tr>
+                    <th style="width:10%">Category</th>
+                    <th style="width:70%">Title</th>
+                    <th style="width:10%">Edited</th>
+                    <th style="width:10%">Votes</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var forecast in forecasts)
+                {
+                    <tr>
+
+                        <td>@forecast.Date.ToShortDateString()</td>
+                        <td>@forecast.TemperatureC</td>
+                        <td><p style="margin:0px; padding:0px">@forecast.Summary</p><p style="margin:0px; padding:0px">@Date.ToShortDateString()</p></td>
+                        <td><span class="oi oi-thumb-up">@forecast.TemperatureC</span>  <span class="oi oi-thumb-down">@forecast.TemperatureF</span> </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+<div id="Sidebar">
+
+</div>
+ 
+@code
+{
+    private WeatherForecast[] forecasts;
+
+    protected override async Task OnInitializedAsync()
+    {
+        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+    }
+
+     DateTime Date = DateTime.Now;
+
+}
