--- a/Stable Frontend/Pages/Petition Post.razor
+++ b/Stable Frontend/Pages/Petition Post.razor
@@ -1,3 +1,32 @@
-﻿<div>
+﻿@page "/petition post"
+<!-- This page will be an individual page for announcements-->
 
+<div class="navbar navbar-lgiht bg-light">
+    <div class="navbar-brand mb-0">
+        <h2>Petition</h2>
+    </div>
 </div>
+<div>
+    <div style="margin:3%" id="Post Contents">
+        <div class="alert alert-light mt-4" role="alert">
+            <h2>@Title</h2>                 <!-- This portion is for the announcement title-->
+            <p style="margin:0px;padding:0px; font-size:9pt">Edited by @Author | @Date</p>
+            <hr style="margin:0px 0px 5px 0px ">
+
+            <span class="text-nowrap">
+                @((MarkupString)myMarkup)       <!-- This portion is for the announcement contents -->
+            </span>
+        </div>
+    </div>
+</div>
+
+
+
+
+@code
+{
+    string Title = "This is the title";
+    string myMarkup = "<p class='markup'>This is a <em>markup string</em>.</p>";
+    string Author = "Eric Sung";
+    string Date = "01:01:2021";
+}
