Can successfully add posts now

--- a/Stable Frontend/Pages/Announcement.razor
+++ b/Stable Frontend/Pages/Announcement.razor
@@ -67,7 +67,7 @@
                 </table>
             </div>
             <div id="edit-button-container">
-                <button id="add_post" @onclick="AddPost">Add Announcement</button>
+                <button class="btn-primary" id="add_post" @onclick="AddPost">Add Announcement</button>
             </div>
         </div>
     </div>
