Updated the form to look a little better

--- a/Stable Frontend/Pages/AnnouncementEditor.razor
+++ b/Stable Frontend/Pages/AnnouncementEditor.razor
@@ -19,54 +19,64 @@
 
     <h1>Text Editor</h1>
     <br />
-
-    <div id="toolbar">
-        <span class="ql-formats">
-            <select class="ql-font">
-                <option selected=""></option>
-                <option value="serif"></option>
-                <option value="monospace"></option>
-            </select>
-            <select class="ql-size">
-                <option value="small"></option>
-                <option selected=""></option>
-                <option value="large"></option>
-                <option value="huge"></option>
-            </select>
-        </span>
-        <span class="ql-formats">
-            <button class="ql-bold"></button>
-            <button class="ql-italic"></button>
-            <button class="ql-underline"></button>
-            <button class="ql-strike"></button>
-        </span>
-        <span class="ql-formats">
-            <select class="ql-color"></select>
-            <select class="ql-background"></select>
-        </span>
-        <span class="ql-formats">
-            <button class="ql-list" value="ordered"></button>
-            <button class="ql-list" value="bullet"></button>
-            <button class="ql-indent" value="-1"></button>
-            <button class="ql-indent" value="+1"></button>
-            <select class="ql-align">
-                <option selected=""></option>
-                <option value="center"></option>
-                <option value="right"></option>
-                <option value="justify"></option>
-            </select>
-        </span>
-        <span class="ql-formats">
-            <button class="ql-link"></button>
-        </span>
-    </div>
+    <form>
+        <div class="form-group">
+            <label for="titleInput">Title</label>
+            <input @bind="Title" type="text" class="form-control" id="titleInput" placeholder="Enter title">
+        </div>
+        <div class="form-group">
+            <div id="toolbar">
+                <span class="ql-formats">
+                    <select class="ql-font">
+                        <option selected=""></option>
+                        <option value="serif"></option>
+                        <option value="monospace"></option>
+                    </select>
+                    <select class="ql-size">
+                        <option value="small"></option>
+                        <option selected=""></option>
+                        <option value="large"></option>
+                        <option value="huge"></option>
+                    </select>
+                </span>
+                <span class="ql-formats">
+                    <button class="ql-bold"></button>
+                    <button class="ql-italic"></button>
+                    <button class="ql-underline"></button>
+                    <button class="ql-strike"></button>
+                </span>
+                <span class="ql-formats">
+                    <select class="ql-color"></select>
+                    <select class="ql-background"></select>
+                </span>
+                <span class="ql-formats">
+                    <button class="ql-list" value="ordered"></button>
+                    <button class="ql-list" value="bullet"></button>
+                    <button class="ql-indent" value="-1"></button>
+                    <button class="ql-indent" value="+1"></button>
+                    <select class="ql-align">
+                        <option selected=""></option>
+                        <option value="center"></option>
+                        <option value="right"></option>
+                        <option value="justify"></option>
+                    </select>
+                </span>
+                <span class="ql-formats">
+                    <button class="ql-link"></button>
+                </span>
+            </div>
+            <div @ref="@divEditorElement" />
+        </div>
+    </form>
+    <button class="btn btn-primary" @onclick="SubmitContents">Submit</button>
+    
 
 
 
 
 
 }
-<div @ref="@divEditorElement" />
+
 
 @* <br /> *@
 @* <button class="btn btn-primary" @onclick="GetText">Get Text</button> *@
@@ -74,5 +84,5 @@
 @* <button class="btn btn-primary" @onclick="GetEditorContent">Get Content</button> *@
 @* <br /> *@
 
+<p></p>
 
-<button class="btn-primary" @onclick="SubmitContents">Submit</button>
