--- a/Stable Frontend/Pages/AnnouncementPost.razor
+++ b/Stable Frontend/Pages/AnnouncementPost.razor
@@ -14,7 +14,7 @@
     <div style="margin:3%" id="Post Contents">
         <div class="alert alert-light mt-4" role="alert">
             <h2>@Announcement.Title</h2>                 <!-- This portion is for the announcement title-->
-            <p style="margin:0px;padding:0px; font-size:9pt">Edited by @Announcement.Author | @Announcement.LastModified</p>
+            <p style="margin:0px;padding:0px; font-size:9pt">Edited by @Announcement.Author | @Announcement.LastModified.ToLocalTime()</p>
             <hr style="margin:0px 0px 5px 0px ">
 
             <span class="text-nowrap">
