--- a/Stable Frontend/Shared/MainLayout.razor
+++ b/Stable Frontend/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager NavigationManager
 
 <div class="sidebar">
     <NavMenu />
@@ -6,10 +7,25 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <button class="btn btn-primary" @onclick="Login">Login</button>
+        <button class="btn btn-secondary" @onclick="Register">Register</button>
     </div>
 
     <div class="content px-4">
         @Body
     </div>
 </div>
+
+@code
+{
+
+    private void Login()
+    {
+        NavigationManager.NavigateTo("announcement");
+    }
+
+    private void Register()
+    {
+        NavigationManager.NavigateTo("announcement");
+    }
+}
