--- a/Stable Frontend/Pages/_Host.cshtml
+++ b/Stable Frontend/Pages/_Host.cshtml
@@ -37,6 +37,33 @@
     <script src="_framework/blazor.server.js"></script>
     <!-- Quill library -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="BlazorQuill.js"></script>
+<script src="BlazorQuill.js"></script>
+<script src="Login.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyCJlvx147s4Dfh7U7G9bsJnNxkrwtFfFcI",
+    authDomain: "uah-stable.firebaseapp.com",
+    projectId: "uah-stable",
+    storageBucket: "uah-stable.appspot.com",
+    messagingSenderId: "299390933538",
+    appId: "1:299390933538:web:43c4aebcce4a0cd657487b",
+    measurementId: "G-KKNZX8GZQ2"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-auth.js"></script>
 </body>
 </html>
