--- a/Stable Frontend/Pages/PetitionEditor.razor
+++ b/Stable Frontend/Pages/PetitionEditor.razor
@@ -1,4 +1,4 @@
-﻿@page "/announcementeditor"
+﻿@page "/petitioneditor"
 @using Stable_Lib.Handlers
 @inject IJSRuntime JSRuntime
 @inject FirestoreHandler Handler
@@ -67,15 +67,5 @@
         </div>
     </form>
     <button class="btn btn-primary" @onclick="SubmitContents">Submit</button>
-   
+
 }
-
-
-@* <br /> *@
-@* <button class="btn btn-primary" @onclick="GetText">Get Text</button> *@
-@* <button class="btn btn-primary" @onclick="GetHTML">Get HTML</button> *@
-@* <button class="btn btn-primary" @onclick="GetEditorContent">Get Content</button> *@
-@* <br /> *@
-
-<p></p>
-
