--- a/Stable Frontend/Pages/LoginPage.razor
+++ b/Stable Frontend/Pages/LoginPage.razor
@@ -11,7 +11,7 @@
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
-                    <form autocomplete="off" id="login-form" class="form" action="" method="post">
+                    <form id="login-form" class="form" action="" method="post">
                         <h3 class="text-center text-info">Login</h3>
                         <div class="form-group">
                             <label for="email" class="text-info">Email:</label><br>
