--- a/Stable Frontend/Pages/RegisterPage.razor
+++ b/Stable Frontend/Pages/RegisterPage.razor
@@ -10,15 +10,15 @@
     <div id="login-row" class="row justify-content-center align-items-center">
         <div id="login-column" class="col-md-6">
             <div id="login-box" class="col-md-12">
-                <form  id="login-form" class="form" action="" method="post">
+                <form id="login-form" class="form" action="" method="post">
                     <h3 class="text-center text-info">Registration</h3>
                     <div class="form-group">
                         <label for="name" class="text-info">Full Name:</label><br>
-                        <input @bind="Name" autocomplete="off" type="text" name="name" id="name" class="input form-control">
+                        <input @bind="Name" type="text" name="name" id="name" class="input form-control">
                     </div>
                     <div class="form-group">
                         <label for="email" class="text-info">Email:</label><br>
-                        <input @bind="Email" autocomplete="off" type="text" name="email" id="email" class="input form-control input">
+                        <input @bind="Email" type="text" name="email" id="email" class="input form-control input">
                     </div>
                     <div class="form-group">
                         <label for="password" class="text-info">Password:</label><br>
