Added password form

--- a/Stable Frontend/Pages/LoginPage.razor
+++ b/Stable Frontend/Pages/LoginPage.razor
@@ -23,7 +23,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
-                            <input @bind="Password" type="text" name="password" id="password" class="form-control">
+                            <input @bind="Password" type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
                             <!--<label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>-->
