--- a/Stable Frontend/Pages/RegisterPage.razor
+++ b/Stable Frontend/Pages/RegisterPage.razor
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label for="password" class="text-info">Password:</label><br>
-                        <input @bind="Password" type="text" name="password" id="password" class="input form-control" placeholder="Must be at least 8 characters and contain a number!" required>
+                        <input @bind="Password" type="password" name="password" id="password" class="input form-control" placeholder="Must be at least 8 characters and contain a number!" required>
                     </div>
                     <div class="form-group">
                         
