--- a/Stable Frontend/Pages/LoginPage.razor
+++ b/Stable Frontend/Pages/LoginPage.razor
@@ -27,9 +27,9 @@
                         </div>
                         <div class="form-group">
                             <!--<label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>-->
-                            <input @onclick="SubmitInfo" type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                         </div>
                     </form>
+                    <button @onclick="SubmitInfo" type="submit" name="submit" class="btn btn-info btn-md">Submit</button>
                 </div>
             </div>
         </div>
